better figure style

--- a/static/index.css
+++ b/static/index.css
@@ -16,10 +16,31 @@ body {
   color: #333333;
   background-color: white;
   overflow-y: hidden;
+
+  counter-reset: figures;
 }
 
 img {
   max-width: 100%;
+}
+
+figure {
+  display: flex;
+  flex-flow: column;
+  padding: 5px;
+}
+
+figcaption {
+  counter-increment: figures;
+
+  font: italic smaller sans-serif;
+  padding: 3px;
+  text-align: center;
+}
+
+figcaption:before {
+  content: 'Figure ' counter(figures) ' - ';
+  font-weight: bold;
 }
 
 .header {
